# Asteroids

./: .gitignore  CMakeLists.txt  CMakeSettings.json
Asteroids/: Asteroids.cpp  CMakeLists.txt
Asteroids/AsteroidsGame/: AsteroidsGame.cpp  AsteroidsGame.h
Asteroids/AsteroidsGame/Asteroid/: Asteroid.cpp  Asteroid.h
Asteroids/AsteroidsGame/Bullet/: Bullet.cpp  Bullet.h
Asteroids/AsteroidsGame/Ship/: Ship.cpp  Ship.h
Asteroids/AsteroidsGame/Upgrade/: Upgrade.cpp  Upgrade.h
Asteroids/Audio/: Audio.cpp  Audio.h
Asteroids/Audio/WAV/: WAV.cpp  WAV.h
Asteroids/Engine/Audio/: Audio.cpp  Audio.h
Asteroids/Engine/Audio/WAV/: WAV.cpp  WAV.h
Asteroids/Engine/HUD/: HUD.cpp  HUD.h
Asteroids/Engine/HUD/HUDElement/: HUDElement.cpp  HUDElement.h
Asteroids/Engine/HUD/HUDElement/ProgressBar/: ProgressBar.cpp  ProgressBar.h
Asteroids/Engine/HUD/HUDElement/Text/: Text.cpp  Text.h  font.dds
Asteroids/Engine/HUD/HUDElement/Text/Menu/: Menu.cpp  Menu.h
Asteroids/Engine/IO/: IO.cpp  IO.h
Asteroids/Engine/Options/: Options.cpp  Options.h
Asteroids/Engine/ParticleSystem/: ParticleSystem.cpp  ParticleSystem.h
Asteroids/Engine/ParticleSystem/Particle/: Particle.cpp  Particle.h
Asteroids/Engine/PostProcessing/: PostProcessing.cpp  PostProcessing.h
Asteroids/Engine/Rectangle/: Rectangle.cpp  Rectangle.h
Asteroids/Engine/Rectangle/GameObject/: GameObject.cpp  GameObject.h
Asteroids/Engine/Rectangle/GameObject/PolyShape/: PolyShape.cpp  PolyShape.h
Asteroids/Engine/Shader/: Shader.cpp  Shader.h  default.frag  default.vert  particle.frag  particle.vert  postproc.frag  postproc.vert  text.frag  text.vert
Asteroids/Engine/Text/: Text.cpp  Text.h
Asteroids/Engine/Text/Menu/: Menu.cpp  Menu.h
Asteroids/Engine/Texture/: Texture.cpp  Texture.h
Asteroids/Engine/Timing/: Timing.cpp  Timing.h
Asteroids/Engine/Window/: Window.cpp  Window.h
Asteroids/IO/: IO.cpp  IO.h
Asteroids/ParticleSystem/: ParticleSystem.cpp  ParticleSystem.h
Asteroids/ParticleSystem/Particle/: Particle.cpp  Particle.h
Asteroids/Rectangle/: Rectangle.cpp  Rectangle.h
Asteroids/Rectangle/GameObject/: GameObject.cpp  GameObject.h
Asteroids/Rectangle/GameObject/Bullet/: Bullet.cpp  Bullet.h
Asteroids/Rectangle/GameObject/PolyShape/: PolyShape.cpp  PolyShape.h
Asteroids/Rectangle/GameObject/PolyShape/Asteroid/: Asteroid.cpp  Asteroid.h
Asteroids/Rectangle/GameObject/PolyShape/Ship/: Ship.cpp  Ship.h
Asteroids/Shader/: Shader.cpp  Shader.h  default.frag  particle.frag  particle.vert
Asteroids/Text/: Text.cpp  Text.h
Asteroids/Text/Menu/: Menu.cpp  Menu.h
Asteroids/Texture/: Texture.cpp  Texture.h
Asteroids/Timing/: Timing.cpp  Timing.h
Asteroids/Window/: Window.cpp  Window.h
